found order by NewID() for sql random selection from answer population tables

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "InsertKnife": "Server=localhost;Database=InsertKnife;Trusted_Connection=True;" 
+  }, 
   "AllowedHosts": "*"
 }
